2008-11-25  Robert Staudinger  <robsta@gnome.org>

	* Makefile.am: fix ccss-clutter pkg-config file installation.

	* ccss/ccss.sym: export `ccss_style_foreach'.

2008-11-24  Robert Staudinger  <robsta@gnome.org>

	* ccss-cairo/Makefile.am: link with correct version info.

2008-11-24  Robert Staudinger  <robsta@gnome.org>

	* Makefile.am:
	* doc/tmpl/ccss-unused.sgml:
	* doc/tmpl/style.sgml:
	* libccss-1.pc.in:
	* libccss-cairo-1.pc.in:
	Correctly build the standalone libccss-cairo.

2008-11-24  Robert Staudinger  <robsta@gnome.org>

	* Makefile.am:
	* ccss-cairo/Makefile.am:
	* ccss-cairo/ccss-background-parser.c (bg_attachment_parse),
	(bg_image_parse), (bg_position_parse), (bg_repeat_parse),
	(bg_size_parse), (background_factory), (background_attachment_new),
	(background_attachment_convert), (background_image_new),
	(background_image_convert), (background_position_new),
	(background_position_convert), (background_repeat_new),
	(background_repeat_convert), (background_size_new),
	(background_size_convert), (peek_property_class),
	(ccss_background_get_ptable):
	* ccss-cairo/ccss-background-parser.h:
	* ccss-cairo/ccss-background.c (create_pattern), (repeat),
	(repeat_x), (repeat_y), (no_repeat), (ccss_background_fill):
	* ccss-cairo/ccss-background.h:
	* ccss-cairo/ccss-border-image-parser.c (parse_tiling),
	(border_image_new), (border_image_convert), (peek_property_class),
	(ccss_border_image_get_ptable):
	* ccss-cairo/ccss-border-image-parser.h:
	* ccss-cairo/ccss-border-image.c (create_tile), (create_border),
	(create_middle), (paint), (ccss_border_image_draw):
	* ccss-cairo/ccss-border-image.h:
	* ccss-cairo/ccss-border-parser.c (match_style), (lookup_style),
	(parse_width), (parse_style), (parse_radius),
	(border_color_factory), (border_style_factory),
	(border_width_factory), (border_factory_impl), (border_factory),
	(border_left_factory), (border_top_factory),
	(border_right_factory), (border_bottom_factory),
	(border_radius_new), (border_radius_factory),